- The controls are now 'fixed' at the top of the alignment viewer (feature) - in regards to the above new feature, the pairwise div and legend div are now set to display in the current viewport when ever you toggle them on - added new class for 'ambiguous' bases (represented by a '?') - fixed bug in IE which didn't allow you to trim any alignment after the first one in a project (added 'random' paramter in ajax request)
git-svn-id: http://svn.dnalc.org/ga/pipeline@719 8e20c4c2-b435-4367-b5b9-847ebbf7797d

--- a/vhosts/pipeline.dnalc.org/htdocs/css/alignment_viewer.css
+++ b/vhosts/pipeline.dnalc.org/htdocs/css/alignment_viewer.css
@@ -1,3 +1,13 @@
+#controls_div{
+	position:fixed;
+	background:#FDFDFD;
+	top:0px;
+	z-index:1002;
+	padding-top:10px;
+	width:100%;
+	height:35px;
+}
+
 #alignment{
   overflow:auto;
   font-family:Courier,monospace;
@@ -53,6 +63,7 @@ div.viewport {
  left:1px;
  width:100%;
  padding:3px;
+ margin-top:20px;
 }
 #labels{
  float:left;
@@ -194,7 +205,7 @@ input.disabled{
 *  pairwise_div is displayed in both proteins and nucleotides
 **/
 #pairwise_div {
-	z-index:1001;
+	z-index:1003;
 	/*width:auto;*/
 	/*height:auto;*/
 	position:absolute;
@@ -211,7 +222,6 @@ input.disabled{
 	max-height:375px;
 }
 #pairwise_div_body{
-
 	overflow:auto;
 	max-height:375px;
 }
@@ -244,4 +254,8 @@ input.disabled{
 #alignment_links{
 	font-size:10px;
 	font-family:arial;
+}
+
+.bases div div.ambiguous{
+	color:#666;
 }
