--- a/vhosts/pipeline.dnalc.org/htdocs/css/alignment_viewer_amino.css
+++ b/vhosts/pipeline.dnalc.org/htdocs/css/alignment_viewer_amino.css
@@ -71,7 +71,7 @@
 
 
 #legend{
-	z-index:1001;
+	z-index:1003;
 	width:200px;
 	height:230px;
 	position:absolute;
